# fastrace

./: .clang-format  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  Modelfile  SPEC_signal_visualization.md  dump_counts.patch  fix.patch  gen_array.py  patch.py  patch_click2.py  patch_cpp.py  patch_mainwindow.py  patch_test.py  skills-lock.json  test_buildIndex.cpp  test_chunk.cpp  test_chunks.cpp  test_compare.cpp  test_counts.cpp  test_verify.cpp
.claude/: CLAUDE.md
.githooks/: pre-commit
.github/workflows/: cmake-multi-platform.yml  cpp-parser-linux-mac.yml  cpp-parser-win.yml  cpp-parser-windows.yml
cpp/: CMakeLists.txt  refactor.py
cpp/detectors/: DoipDetector.cpp  PduDetector.cpp  SomeIpSdDetector.cpp
cpp/doc/: design.md  split_object_designs.md
cpp/include/: Analyzer.h  ArxmlParser.h  ArxmlTypes.h  BlfTypes.h  Cursor.h  Detection.h  DetectionEngine.h  Detector.h  MappedFile.h  NetTypes.h  PacketStore.h  ProtocolMessage.h  ProtocolParser.h  RecentFiles.h  SignalDatabases.h  SignalDecoder.h  TraceMessage.h  WorkQueue.h
cpp/include/detectors/: DoipDetector.h  PduDetector.h  SomeIpSdDetector.h
cpp/src/: Analyzer.cpp  Analyzer.h  ArxmlParser.cpp  DetectionEngine.cpp  MappedFile.cpp  ProtocolParser.cpp  RecentFiles.cpp  SignalDatabases.cpp  SignalDecoder.cpp  WorkQueue.cpp  main.cpp
reference/: verify_blf.py
specs/001-topbar-db-ui-refactor/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/001-topbar-db-ui-refactor/checklists/: requirements.md
specs/001-topbar-db-ui-refactor/contracts/: topbar-signals.md
specs/002-message-lazy-load/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/002-message-lazy-load/checklists/: requirements.md
specs/002-message-lazy-load/contracts/: internal-api.md
specs/003-timeline-overview-heatmap/: plan.md  spec.md  tasks.md
specs/003-timeline-overview-heatmap/checklists/: requirements.md
specs/004-single-db-load/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/004-single-db-load/checklists/: requirements.md
specs/005-analyzer-reuse/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/005-analyzer-reuse/checklists/: requirements.md
specs/006-anomaly-detection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-anomaly-detection/checklists/: requirements.md
ui/: CMakeLists.txt  index.html  package-lock.json  package.json
ui/include/: AnalyzerPreviewWidget.h  DatabaseComboBox.h  DetectionFilterProxyModel.h  DetectionTableModel.h  DetectionsWidget.h  LeftPanelWidget.h  MainWindow.h  MessageDetailsWidget.h  MessageListWidget.h  MessageTableModel.h  NotebookBlockWidget.h  NotebookView.h  OverviewView.h  ScriptEditorWidget.h  TimelineOverviewWidget.h  TimelineWidget.h  TopBarWidget.h
ui/src/: AnalyzerPreviewWidget.cpp  AnalyzerPreviewWidget.h  AnalyzerPreviewWidget.ui  App.jsx  DatabaseComboBox.cpp  DatabaseComboBox.h  DetectionFilterProxyModel.cpp  DetectionTableModel.cpp  DetectionsWidget.cpp  DetectionsWidget.h  DetectionsWidget.ui  LeftPanelWidget.cpp  LeftPanelWidget.h  LeftPanelWidget.ui  MainWindow.cpp  MainWindow.h  MessageDetailsWidget.cpp  MessageDetailsWidget.h  MessageDetailsWidget.ui  MessageListWidget.cpp  MessageListWidget.h  MessageListWidget.ui  MessageTableModel.cpp  MessageTableModel.h  NotebookBlockWidget.cpp  NotebookBlockWidget.h  NotebookView.cpp  NotebookView.h  OverviewView.cpp  OverviewView.h  ScriptEditorWidget.cpp  ScriptEditorWidget.h  ScriptEditorWidget.ui  TimelineOverviewWidget.cpp  TimelineWidget.cpp  TimelineWidget.h  TimelineWidget.ui  TopBarWidget.cpp  TopBarWidget.h  TopBarWidget.ui  (+2 more)
ui/src/components/: FilePicker.jsx  MainLayout.jsx  SignalPanel.jsx
ui/src/components/analyzer/: AnalyzerCell.jsx  AnalyzerEditor.jsx
ui/src/components/tabs/: AnalyzersTab.jsx  PacketsTab.jsx  TraceTab.jsx
ui/src/hooks/: useBackend.js  useWebSocket.js
ui/src/mock/: data.js
ui/tests/: CMakeLists.txt  tst_TimelineOverviewWidget.cpp  tst_TimelineWidget.cpp
